--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -104,11 +104,11 @@ Auf der einen Seite werden die Befürchtungen der anderen für übertrieben, unw
 
 Am gegenüberliegenden Ufer wird gemahnt, die Ernsthaftigkeit der Situation nicht zu unterschätzen. Gewarnt wird, dass die Konsequenzen des Klimawandels irreversibel seien, weswegen Treibhausgase unverzüglich auf ein Minimum reduziert werden sollten. Um Folgen wie das Abschmelzen der Eisschilde und Gletscher, das Aussterben verschiedenster Tierarten und der Anstieg des Meeresspiegels zu verhindern, spielen erneuerbare Energien eine entscheidende Rolle. Im Gegensatz zu fossilen Energieträgern erzeugen die Erneuerbaren keine oder nur kaum Treibhausgasemissionen. Bis 2030 sollen die regenerativen Energien 80\% des Strombedarfs Deutschlands decken. Da die Möglichkeiten der Energieerzeugung in Deutschland durch Wasserkraft und Biomasseverbrennung schon heute nahezu ausgeschöpft sind, bilden Solar- und Windenergie einen wichtigen Grundpfeiler um die Ausbauziele zu erreichen. 
 
-Ebenso komplex wie die Klimamodelle, die die Verstrickungen verschiedenster Phänomene in unserer Natur berücksichtigen sollen, ist allerdings die Transformation unseres Stromnetzes. In einem Netz, welches dafür ausgelegt wurde, dass wenige größere Kraftwerke Strom einspeisen, werden künftig immer mehr kleinere, dezentrale Kraftwerke mitwirken. Als Folge kommen diverse Herausforderungen auf uns zu. Unter anderem verträgt nicht jedes elektronische Bauteil in einem Niederspannungsnetz Rücklaufstrom. (Quelle?) Allerdings könnte es genau zu einem solchen Rücklaufstrom kommen, wenn in dem Niederspannungsnetz mehr Strom erzeugt als verbraucht wird. Des Weiteren reagiert ein Stromnetz äußerst empfindlich auf Spannungsschwankungen. Auf Grund dessen müssen Netzbetreiber darauf achten, dass genauso viel Strom verbraucht wie erzeugt wird. Solar und Windenergie zählen zu den fluktuierenden Energieerzeugern, ergo ist die Stromproduktion nur sehr begrenzt regulierbar und somit nicht an die aktuelle Marktnachfrage anpassbar.
+Ebenso komplex wie die Klimamodelle, die die Verstrickungen verschiedenster Phänomene in unserer Natur berücksichtigen sollen, ist allerdings die Transformation unseres Stromnetzes. In einem Netz, welches dafür ausgelegt wurde, dass wenige größere Kraftwerke Strom einspeisen, werden künftig immer mehr kleinere, dezentrale Kraftwerke mitwirken. Als Folge kommen diverse Herausforderungen auf uns zu. Unter anderem verträgt nicht jedes elektronische Bauteil in einem Niederspannungsnetz Rücklaufstrom. (Quelle?) Allerdings könnte es genau zu einem solchen Rücklaufstrom kommen, wenn in dem Niederspannungsnetz mehr Strom erzeugt als verbraucht wird. Des Weiteren reagiert ein Stromnetz äußerst empfindlich auf Spannungsschwankungen. Auf Grund dessen müssen Netzbetreiber darauf achten, dass genauso viel Strom verbraucht wie erzeugt wird. Solar- und Windenergie zählen zu den fluktuierenden Energieerzeugern, ergo ist die Stromproduktion nur sehr begrenzt regulierbar und somit nicht an die aktuelle Marktnachfrage anpassbar.
 
 Die Relevanz der Abschlussarbeit basiert auf der Annahme, dass eine genauere Prognose über die erzeugte Strommenge helfen würde das Stromnetz zu stabilisieren und Netzschwankungen, ergo das Risiko eines Brown- oder sogar Black-Outs zu minimieren. Anhand der neu gewonnenen
 Information könnten kurzfristige Stromimporte beziehungsweise -exporte besser reguliert werden. Ebenso wäre es denkbar, dass man für die Industrie und/ oder Endverbraucher mehr Anreize schafft ihren Stromverbrauch zu einem gewissen Grad an die Verfügbarkeit des Stroms
-anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls hilfreich wäre. Zuletzt könnten starke Abweichungen zwischen der Prognose und der tatsächlich erzeugten Strommenge ein Indiz darauf sein, dass die Solaranlage eine Wartung benögtigt.
+anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls hilfreich wäre. Zuletzt könnten starke Abweichungen zwischen der Prognose und der tatsächlich erzeugten Strommenge ein Indiz darauf sein, dass die Solaranlage eine Wartung benötigt.
 
 % https://zeitung.faz.net/fas/technik-und-motor/2023-05-14/fuenf-am-tag/892835.html
 
@@ -116,7 +116,7 @@ anzupassen, wobei die Information über die Verfügbarkeit von Strom gleichfalls
 
 \section{Stand der Technik}
 
-Im folgenden soll betrachtet werden, wie das Stromnetz von Deutschland im Moment aufgestellt ist und welche Maßnahmen ergriffen werden müssen, um den Bedarf an Strom zu decken und die Energiewende zu meistern. Betreffend gilt es, den in Zukunft zu erwartenden Strombedarf zu analysieren
+Im folgenden soll betrachtet werden, wie das Stromnetz von Deutschland im Moment aufgestellt ist und welche Maßnahmen ergriffen werden müssen, um den Bedarf an Strom zu decken und die Energiewende zu meistern. Zudem gilt es, den in Zukunft zu erwartenden Strombedarf zu analysieren.
 
 \subsection{Strombedarf in Deutschland}
 
@@ -423,7 +423,7 @@ Aus der Gleichung wird ersichtlich, dass das Ergebnis maximal $(=1)$ wird, wenn 
 
 Anhand der Temperatur wird allerdings ersichtlich, dass die richtige Interpretation des Diagramms wichtig ist und teilweise die Aussagekraft nur sehr beschränkt ist. Wie wir wissen, leidet die Effizienz einer Solaranlage unter hohen Temperaturen. Dennoch vermittelt \autoref{fig:heatmap} den Eindruck, dass die Stromproduktion mit steigender Temperatur zunimmt. Schließlich haben die Temperatur und die Solarengerie den Korrelationskoeffizienten 0.22. Jedoch darf man die Multikollinearität zwischen den anderen Faktoren nicht außer Acht lassen. So ergibt sich für die Temperatur und der Sonneneinstrahlung der Wert 0.42. Wenig überraschend steigt die Temperatur mit erhöhter Sonneneinstrahlung. Wie so häufig bedeutet Korrelation nicht gleich Kausalität. 
 
-Die tatsächliche Realität ist, dass Temperatur und der Stromertrag einer Photovoltaikanlage einen negativen Korrelationskoeffizienten haben.
+Die tatsächliche Realität ist, dass Temperatur und der Stromertrag einer Photovoltaikanlage einen negativen Korrelationskoeffizienten haben. Dies soll später genauer untersucht werden.
 
 \subsubsection{Nicht-lineare Beziehungen}
 
@@ -491,12 +491,16 @@ Die Konsequenz, dass die Zusammenhänge zwischen den Merkmalen und der Zielvaria
 
 Ein Entscheidungsbaum \textit{zu engl.: decision tree} hat eine Flussdiagramm ähnliche Baumstruktur, in der je nach ausgewählter Hyperparameter alle möglichen Ergebnisse, Eingabekosten und Nutzen dargestellt werden kann. Da das Modell sowohl für kategoriale als auch kontinuierliche Zielvariablen verwendet werden kann, eignet es sich für die Prognose verschiedener Solaranlagen. 
 
+\subsection{Diskretisierung der Zielvariablen}
+
 Die Bedingungen werden innerhalb der Entscheidungsknoten aufgestellt. Der Entscheidungsbaum wird so lange durchgegangen, bis man an einem Endknoten angelangt ist. Die Endknoten eines Binärbaums werden als Blätter bezeichnet, sie bilden das Ergebnis für die jeweiligen Eingabedaten ab. Folglich müssen die Bedingungen des Binärbaum von oben nach unten durchgegangen werden, um zu einem Ergebnis zu gelangen. Ein Binärbaum hat die Eigenschaften, dass er maximal $2^{n}$ Blätter besitzen kann, wobei $n$ für die Höhe des Baums steht. Indes es nur so viele Ergebnisse wie Blätter geben kann, muss die Wertemenge der Zielvariablen diskretisiert werden. 
 
-Die diskretisierten Werte werden so augeswählt, sodass der mittlere quadratische Fehler am geringsten ist. Für die Berechnung des mittleren quadratischen Fehler eines Blattes werden ausschließlich die Trainingswerte verwendet, die eben diesem Blatt zuvor zugeordnet wurden. Auf Grund des geringen Rechenaufwands genießt diese Straffunktion in vielen Bereichen der Informatik größerer Beliebtheit. Schließlich genügt durch die Art wie ein Computer Zahlen speichert eine anspruchslose Operation, explizit gesagt eine Bitverschiebung nach links, um das Quadrat einer Zahl auszurechnen. Somit ist diese Methode äußerst effizient, um die Mitte zwischen 2 oder mehreren Punkten zu finden. Den mittleren quadratischen Fehler als Straffunktion zu verwenden birgt allerdings den Nachteil, dass Ausreißer die Vorhersage sehr stark verfälschen können, weshalb diese idealerweise aus dem für das Training zuständigen Datensatz entfernt werden.
+Die diskretisierten Werte werden so ausgewählt, sodass der mittlere quadratische Fehler am geringsten ist. Für die Berechnung des mittleren quadratischen Fehler eines Blattes werden ausschließlich die Trainingswerte verwendet, die eben diesem Blatt zuvor zugeordnet wurden. Auf Grund des geringen Rechenaufwands genießt diese Straffunktion in vielen Bereichen der Informatik größerer Beliebtheit. Schließlich genügt durch die Art wie ein Computer Zahlen speichert eine anspruchslose Operation, explizit gesagt eine Bitverschiebung nach links, um das Quadrat einer Zahl auszurechnen. Somit ist diese Methode äußerst effizient, um die Mitte zwischen 2 oder mehreren Punkten zu finden. Den mittleren quadratischen Fehler als Straffunktion zu verwenden birgt allerdings den Nachteil, dass Ausreißer die Vorhersage sehr stark verfälschen können, weshalb diese idealerweise aus dem für das Training zuständigen Datensatz entfernt werden.
 
 
 %https://www.geeksforgeeks.org/python-decision-tree-regression-using-sklearn/
+
+\subsection{Lineare Beziehungen}
 
 Wie so häufig kommen mit den Vorteilen eines Modells auch Nachteile einher. Zu einer der vielen Vorteile von Entscheidungsbäumen gehört die leicht verständliche Darstellung der Entscheidungsprozesse. Das Modell lässt sich als Flussdiagramm darstellen, wodurch sich die Vorhersagen des Modells gut nachvollziehen lassen. Dies ist bei der Fehlersuche und der Interpretierbarkeit von großem Nutzen.
 
@@ -510,10 +514,25 @@ Wie so häufig kommen mit den Vorteilen eines Modells auch Nachteile einher. Zu 
 
 Die Tatsache, dass nichtlineare Beziehungen gut erkannt werden können ist sowohl ein Nachteil als auch ein Vorteil. Viele der Wettermerkmale haben eine nicht-lineare Beziehung zu der erzeugten Strommenge einer Solaranlage. Vor allem sind die Beziehungen bei verschiedenen Solaranlagen unterschiedlich, wodurch die Vorverarbeitung der Daten sich als schwierig darstellt. Insofern ist es ein großer Vorteil, dass die Wetterdaten nicht modifiziert werden müssen. In \autoref{fig:decisiontree_linear} ist jedoch ersichtlich, wie schwer sich ein Entscheidungsbaum mit linearen Beziehungen, wie beim Fall $x=y$, tun kann. Der Entscheidungsbaum kann den Zusammenhang $x=y$ nicht nur sehr limitiert wiedergeben, des Weiteren wird bei gleicher Tiefe des Entscheidungsbaum der Fehler  unabdingbar und maßlos größer, sobald Vorhersagen zu Daten getroffen werden soll, dessen Erwartungswert der Zielvariablen außerhalb des Wertebereichs des Trainingsdatensatz liegt. Das liegt daran, dass nach dem trainieren des Modells die Menge der möglichen Ausgangswerte bestimmt und statisch ist. Betrachte man nochmals \autoref{fig:decisiontree_linear}, so wird ersichtlich, dass für $x>10$ stets $y=11$ prognostiziert wird. Da $x=y$ ist, würde ein optimales Modell für $x=111$ auch $y=111$ vorhersagen. Wie bereits erwähnt würde unser Modell $y=11$ prognostizieren, wodurch wir den quadratischen Fehler $100^{2}=10000$ erhalten. 
 
-Aus dieser Eigenschaft von Entscheidungsbäumen müssen zwei Schlussfolgerungen für die Prognose über die Stromerzeugung von Photovoltaikanlagen gezogen werden. Zum einem muss das Modell so lange trainiert werden, bis der Trainingsdatensatz alle möglichen Ausgangswerte der Zielvariablen beinhaltet. Da die Jahreszeit nicht nur eine erhebliche Rolle für die Vorhersage spielt, sondern den Maximalertrag eines Tages führend mitbestimmt, definiert sie folglich auch die Wertemenge der Zielvariablen. Somit sollte für jede Solaranlage mindestens ein Jahr lang Daten gesammelt werden. Gewiss kann das Modell bereits zuvor trainiert und für die Prognose verwendet werden, allerdings wird die Prognose weniger präzise, desto größer die Differenz zwischen den für das Training verwendeten Randwerten und den Test- beziehungsweise Produktionsdaten. Im Allgemeinen ist ein Entscheidungsbaum nicht gut darin Vorhersagen für Daten zu treffen, die zuvor nicht im Raum des Trainingsdatensatzes waren.
+\subsection{Schlussfolgerungen für das Training des Modells}
+
+Aus dieser Eigenschaft von Entscheidungsbäumen müssen zwei Schlussfolgerungen für die Prognose über die Stromerzeugung von Photovoltaikanlagen gezogen werden. 
+
+\subsubsection{Schwierigkeiten bei unbekannten Werten}
+
+Zum einem muss das Modell so lange trainiert werden, bis der Trainingsdatensatz alle möglichen Ausgangswerte der Zielvariablen beinhaltet. Da die Jahreszeit nicht nur eine erhebliche Rolle für die Vorhersage spielt, sondern den Maximalertrag eines Tages führend mitbestimmt, definiert sie folglich auch die Wertemenge der Zielvariablen. Somit sollte für jede Solaranlage mindestens ein Jahr lang Daten gesammelt werden. Gewiss kann das Modell bereits zuvor trainiert und für die Prognose verwendet werden, allerdings wird die Prognose weniger präzise, desto größer die Differenz zwischen den für das Training verwendeten Randwerten und den Test- beziehungsweise Produktionsdaten. Im Allgemeinen ist ein Entscheidungsbaum nicht gut darin Vorhersagen für Daten zu treffen, die zuvor nicht im Raum des Trainingsdatensatzes waren.
+
+\subsubsection{Limitierte Wertemenge für mögliche Prognosen}
 
 Die zweite Schlussfolgerung bezieht sich auf die die unterschiedliche Leistung von Solaranlagen. Selbstverständlich haben Photovoltaikanlagen mit qualitativ und quantitativen unterschiedlichen Solarpanelen verschieden hohe Maximalerträge. Folglich ist die Wertemenge der möglichen Ausgangswerte einer Photovoltaikanlage von einem Eigenheim mit weniger Solarmodulen kleiner als die einer häufig größeren, kommerziell genutzten Anlage. Um bei größeren Anlagen die gleiche Auflösung in Bezug auf die Vorhersage zu erhalten, muss die Tiefe des Entscheidungsbaums zunehmen. Da diese die Anzahl der Blätter und somit die Anzahl der möglichen Werte auf direkte Weise steuert. Eine Konsequenz dessen ist, dass die Komplexität zunimmt und das Modell in der Regel einen größeren Trainingsdatensatz benötigt.
 
+\newpage
+
+\section{Optimierung der Hyperparameter}
+
+Bei einem Entscheidungsbaum ist es auf Grund seiner Flexibilität gegenüber der verschiedenen Beziehungen zwischen den Merkmalen und der Zielvariablen von besonderer Wichtigkeit die Hyperparameter entsprechend anzupassen. Wenn ein Entscheidungsbaum in seiner Flexibilität nicht angepasst wird, neigt er dazu sich zu sehr an den Trainingsdatensatz anzupassen. Folglich werden die Datenreihen des Trainingsdatensatz gut abgebildet, sobald das 
+
+\subsection{Tiefe des Entscheidungsbaum}
 
 \begin{figure}
 \centering
@@ -523,10 +542,12 @@ Die zweite Schlussfolgerung bezieht sich auf die die unterschiedliche Leistung v
 \label{fig:decisiontree_example_2}
 \end {figure}
 
+Der Mensch verfügt über eine begrenzte Sinneswahrnehmung, weswegen wir Schwierigkeiten dabei haben uns Dimensionen jenseits von drei bildlich vorzustellen. Sie sind für unser Gehirn ein unvertrautes Konzept, da sie über die alltäglichen Erfahrungen hinausgehen und es uns schlicht an Anschauungsobjekten mangelt. Stattdessen fordert es abstraktes Denkvermögen und mathematische Konzepte. Um ein besseres Verständnis von Entscheidungsbäumen und die Auswirkungen der Hyperparameter zu bekommen, zeichnen wir zuerst das von einem Entscheidungsbaum erstellte Modell mit ausschließlich drei Dimensionen. Das in \autoref{fig:decisiontree_example_2} zu sehende Modell wurde mit der beschränkenden Eigenschaft, dass die Höhe des Entscheidungsbaum maximal zwei sein darf, erstellt. Folglich besitzt der Baum vier Blätter und somit vier mögliche Ausgangswerte für die Prognose. 
+
+Die roten Punkte stellen die Trainingsdaten dar, die für die Erstellung des Modells verwendet wurden. Trotz der geringen Tiefe des Baums, ist es dem Lernalgorithmus möglich die Zusammenhänge der Variablen gut widerzuspiegeln.
 
 
-
-\begin{figure}
+\begin{figure}[H]
 \centering
 \def\svgwidth{350pt}
 \input{assets/decisiontree_example.pdf_tex}
@@ -534,12 +555,18 @@ Die zweite Schlussfolgerung bezieht sich auf die die unterschiedliche Leistung v
 \label{fig:decisiontree_example}
 \end {figure}
 
+\autoref{fig:decisiontree_example} zeigt zum Vergleich ein Modell eines Entscheidungsbaums der Tiefe fünf. Anhand des Schaubilds lässt sich erkennen, dass sämtliche Trainingsdatenpunkte exakt auf den Ebenen des Modells liegen. 
+
+\subsection{Weitere Hyperparameter}
+
+Sämtliche Hyperparameter haben den Sinn und Zweck, dass Modell bezüglich der Anpassung an die Trainingsdaten zu beschränken. 
 
 
-\newpage
+\subsection{Hyperparameter auswählen}
 
-\section{Optimierung der Hyperparameter}
+Da im Vorhinein schwer zu beurteilen ist, welche Hyperparameter am besten zum jeweiligen Datensatz passen, ist eine Rastersuche eine Methode um diese bestmöglichen Parameter zu finden. Eine Rastersuche ist ein Vorgehen, bei der mit roher Gewalt \textit{(zu engl.: brute-force)} versucht wird, die beste Kombination von Hyperparametern zu finden, indem alle Variationen durchprobiert werden.
 
+Da die \textit{Brute-Force-Methode} mit erheblich mehr Rechenaufwand verbunden ist - schließlich muss für jeden Kombination das Modell trainiert und evaluiert werden -, ist eine verkürzte Rastersuche eine beliebte Alternative. Dabei werden nicht alle Variationen durchprobiert, sondern eine zufällige Kombination verschiedener Hyperparameter getestet. Sofern man in Kauf nehmen kann, nicht das bestmögliche Ergebnis zu erzielen, kann durch die randomisierte Auswahl der Kombinationen an Hyperparametern erheblich Rechenzeit eingespart werden.
 
 
 \end{document}
