--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -124,7 +124,13 @@ Im gesamten Jahr 2018 betrug die realisierte Stromerzeugung in Deutschland 543.0
 
 %https://www.smard.de/home/marktdaten?marketDataAttributes=%7B%22resolution%22:%22year%22,%22from%22:1498773600000,%22to%22:1687471199999,%22moduleIds%22:%5B5000410,1004066,1001226,1001225,1004067,1004068,1001228,1001224,1001223,1004069,1004071,1004070,1001227%5D,%22selectedCategory%22:null,%22activeChart%22:true,%22style%22:%22color%22,%22categoriesModuleOrder%22:%7B%7D,%22region%22:%22DE%22%7D
 
-Tatsache ist jedoch, dass die Dekarbonisierung durch Elektrifizierung unserer Industrie, des Verkehrs als auch des privaten Sektors stattfinden soll, weshalb mit einer deutlichen Zunahme des Energiebedarfs zu rechnen ist. Allem voran kommen hierbei Elektroautos und Wärmepumpen ins Spiel, für dessen Betrieb elektrische Energie eine Grundvoraussetzung ist. Bis 2030 sollen sich 15 Millionen Elektroautos auf den deutschen Straßen fortbewegen, damit wäre nahezu jedes vierte Auto im Mutterland der Automobilindustrie kein klassischer Verbrenner mehr, sondern von Energie aus der Wallbox abhängig.
+Tatsache ist jedoch, dass die Dekarbonisierung durch Elektrifizierung unserer Industrie, des Verkehrs als auch des privaten Sektors stattfinden soll, weshalb mit einer deutlichen Zunahme des Energiebedarfs zu rechnen ist. Allem voran kommen hierbei Elektroautos und Wärmepumpen ins Spiel, für dessen Betrieb elektrische Energie eine Grundvoraussetzung ist. 
+
+Die Wärmepumpen führen dazu, dass der Stromverbrauch im Winter deutlich steigen wird. Zwar kann diese ebenfalls im Sommer zum Kühlen der Räume verwendet werden, allerdings ist dabei der Stromverbrauch, zumindest bei einem Teil der Wärmepumpen, signifikant geringer. Nämlich reicht der Erdwärmepumpe eine kleine Umwälzpumpe aus, um die niedrigen Temperaturen aus den Tiefen zu holen und damit das Haus zu kühlen. Der Verdichter, der am meisten Strom verbraucht, wird nur von Luft-Wasser-Wärmepumpen zum Kühlen benötigt.
+
+%https://zeitung.faz.net/fas/wert-wohnen/2023-07-16/wie-kriege-ich-mein-haus-kalt/915655.html
+
+Bis 2030 sollen sich 15 Millionen Elektroautos auf den deutschen Straßen fortbewegen, damit wäre nahezu jedes vierte Auto im Mutterland der Automobilindustrie kein klassischer Verbrenner mehr, sondern von Energie aus der Wallbox abhängig.
 %https://www.tagesschau.de/inland/spitzenrunde-mobilitaet-e-autos-101.html
 
 %https://de.statista.com/statistik/daten/studie/1202904/umfrage/anteil-der-elektroautos-am-pkw-bestand-in-deutschland/#:~:text=Im%20Jahr%202020%20lag%20der,11%2C55%20Millionen%20Fahrzeugen%20entsprechen.
@@ -517,6 +523,21 @@ Wie so häufig kommen mit den Vorteilen eines Modells auch Nachteile einher. Zu 
 \end {figure}
 
 Die Tatsache, dass nichtlineare Beziehungen gut erkannt werden können ist sowohl ein Nachteil als auch ein Vorteil. Viele der Wettermerkmale haben eine nicht-lineare Beziehung zu der erzeugten Strommenge einer Solaranlage. Vor allem sind die Beziehungen bei verschiedenen Solaranlagen unterschiedlich, wodurch die Vorverarbeitung der Daten sich als schwierig darstellt. Insofern ist es ein großer Vorteil, dass die Wetterdaten nicht modifiziert werden müssen. In \autoref{fig:decisiontree_linear} ist jedoch ersichtlich, wie schwer sich ein Entscheidungsbaum mit linearen Beziehungen, wie beim Fall $x=y$, tun kann. Der Entscheidungsbaum kann den Zusammenhang $x=y$ nicht nur sehr limitiert wiedergeben, des Weiteren wird bei gleicher Tiefe des Entscheidungsbaum der Fehler  unabdingbar und maßlos größer, sobald Vorhersagen zu Daten getroffen werden soll, dessen Erwartungswert der Zielvariablen außerhalb des Wertebereichs des Trainingsdatensatz liegt. Das liegt daran, dass nach dem trainieren des Modells die Menge der möglichen Ausgangswerte bestimmt und statisch ist. Betrachte man nochmals \autoref{fig:decisiontree_linear}, so wird ersichtlich, dass für $x>10$ stets $y=11$ prognostiziert wird. Da $x=y$ ist, würde ein optimales Modell für $x=111$ auch $y=111$ vorhersagen. Wie bereits erwähnt würde unser Modell $y=11$ prognostizieren, wodurch wir den quadratischen Fehler $100^{2}=10000$ erhalten. 
+
+\subsection{Aufbau eines Entscheidungsbaum}
+
+\begin{figure}
+%\centering
+%\def\svgwidth{350pt}
+\input{assets/binary_tree_linthicum.pdf_tex}
+%\caption{Einfacher Entscheidungsbaum mit einem Merkmal und der Tiefe 2}
+%\label{fig:binary}
+\end{figure}
+
+Künstliche Intelligenz nimmt eine immer bedeutendere Rolle in unserer heutigen Gesellschaft ein. Bereiche unseres täglichen Lebens werden bereits durch sie erheblich erleichtert. Dennoch schreckt ein Teil der Gesellschaft vor den noch unerforschten Begleiterscheinungen der neuen Technologie zurück. Nicht selten sind die Ergebnisse dieser Algorithmen schwer zu verstehen, wodurch Ungewissheiten hervorgerufen werden. 
+Ein Entscheidungsbaum ist ein Modell aus dem Bereich des maschinellem Lernens, welches wiederum ein Teilgebiet von künstlicher Intelligenz ist. Obwohl Entscheidungsbäume derzeit als äußerst mächtige Lernalgorithmen angesehen werden, sind ihre Prognosen äußerst leicht nachzuvollziehen. Im Grunde genommen ist ein Entscheidungsbaum eine Verkettung von \textit{Wenn-Sonst-Anweisungen}, die schlussendlich zum Ergebnis führen. \autoref{fig:binary_tree_linthicum} zeigt den Entscheidungsbaum für die Solaranlage in Linthicum, Maryland, welcher vom \textit{CART-Algorithmus} erstellt.
+
+
 
 \subsection{Schlussfolgerungen für das Training des Modells}
 
