--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -526,13 +526,13 @@ Die Tatsache, dass nichtlineare Beziehungen gut erkannt werden können ist sowoh
 
 \subsection{Aufbau eines Entscheidungsbaum}
 
-\begin{figure}
+%\begin{figure}
 %\centering
 %\def\svgwidth{350pt}
-\input{assets/binary_tree_linthicum.pdf_tex}
+%\input{assets/binary_tree_linthicum.pdf_tex}
 %\caption{Einfacher Entscheidungsbaum mit einem Merkmal und der Tiefe 2}
 %\label{fig:binary}
-\end{figure}
+%\end{figure}
 
 Künstliche Intelligenz nimmt eine immer bedeutendere Rolle in unserer heutigen Gesellschaft ein. Bereiche unseres täglichen Lebens werden bereits durch sie erheblich erleichtert. Dennoch schreckt ein Teil der Gesellschaft vor den noch unerforschten Begleiterscheinungen der neuen Technologie zurück. Nicht selten sind die Ergebnisse dieser Algorithmen schwer zu verstehen, wodurch Ungewissheiten hervorgerufen werden. 
 Ein Entscheidungsbaum ist ein Modell aus dem Bereich des maschinellem Lernens, welches wiederum ein Teilgebiet von künstlicher Intelligenz ist. Obwohl Entscheidungsbäume derzeit als äußerst mächtige Lernalgorithmen angesehen werden, sind ihre Prognosen äußerst leicht nachzuvollziehen. Im Grunde genommen ist ein Entscheidungsbaum eine Verkettung von \textit{Wenn-Sonst-Anweisungen}, die schlussendlich zum Ergebnis führen. \autoref{fig:binary_tree_linthicum} zeigt den Entscheidungsbaum für die Solaranlage in Linthicum, Maryland, welcher vom \textit{CART-Algorithmus} erstellt.
