--- a/Latex/Bachelorarbeit.tex
+++ b/Latex/Bachelorarbeit.tex
@@ -38,6 +38,8 @@
     {\fontsize{12}{14}\bfseries}{\thesubsection}{0.5em}{}
 \titleformat{\subsubsection} % Anpassungen an Überschriftenebene 3
     {\fontsize{12}{14}\itshape}{\thesubsubsection}{0.5em}{}
+    
+\newcommand*{\fullref}[1]{\hyperref[{#1}]{\autoref*{#1} \nameref*{#1}}}
 
 % Dokumentenanfang
 \begin{document}
@@ -356,38 +358,6 @@ Die auf der Erde gemessene Globalstrahlung setzt sich aus der Diffusstrahlung un
 
 
 
-
-
-Die solare Stromerzeugung beruht auf der reichlich vorhandenen Energie der Sonne, die immense Mengen an Sonnenenergie auf die Erdoberfläche abstrahlt. Das Verständnis der verschiedenen Faktoren, die sich auf die Solarstromerzeugung auswirken, ist entscheidend für die Optimierung der Effizienz und Leistung von Solarenergiesystemen. Unter diesen Faktoren spielt die Sonneneinstrahlung eine zentrale Rolle. In diesem Kapitel befassen wir uns mit der komplizierten Beziehung zwischen Sonneneinstrahlung und Solarstromerzeugung und untersuchen ihre Eigenschaften, Schwankungen und die Auswirkungen auf die Gesamtleistung von Solarenergiesystemen.
-
-5.1 Die Natur der Sonnenstrahlung:
-
-Unter Sonnenstrahlung versteht man die von der Sonne ausgestrahlte elektromagnetische Energie, die durch den Weltraum wandert und die Erdatmosphäre und -oberfläche erreicht. Diese Strahlung umfasst ein Spektrum von Wellenlängen, darunter ultraviolettes (UV), sichtbares Licht und Infrarotstrahlung (IR). Die Menge und Intensität der Sonnenstrahlung, die an einem bestimmten Ort empfangen wird, wird von verschiedenen Faktoren wie Tageszeit, Jahreszeit, Breitengrad und Wetterbedingungen beeinflusst.
-
-5.2 Solare Bestrahlungsstärke und Sonneneinstrahlung:
-
-Zwei wichtige Begriffe zur Quantifizierung der Sonnenstrahlung sind die solare Bestrahlungsstärke und die Sonneneinstrahlung. Die solare Bestrahlungsstärke stellt die von der Sonne empfangene Leistung pro Flächeneinheit dar und wird üblicherweise in Watt pro Quadratmeter (W/m²) gemessen. Die Sonneneinstrahlung hingegen bezieht sich auf die Gesamtmenge der über einen bestimmten Zeitraum empfangenen Sonnenenergie und wird normalerweise in Kilowattstunden pro Quadratmeter (kWh/m²) oder Megajoule pro Quadratmeter (MJ/m²) angegeben.
-
-Die Erdatmosphäre beeinflusst die Sonnenstrahlung, die die Erdoberfläche erreicht. Sie streut und absorbiert einen Teil der Strahlung, was zu Schwankungen in der Intensität und im Spektrum der empfangenen Sonnenenergie führt.
-
-5.3 Schwankungen der Sonneneinstrahlung:
-
-Die Sonneneinstrahlung unterliegt zeitlichen und räumlichen Schwankungen, die die solare Stromerzeugung beeinflussen. Zeitliche Schwankungen treten auf verschiedenen Zeitskalen auf, z. B. in Tages-, Saison- und Jahreszyklen.
-
-Die täglichen Schwankungen der Sonnenstrahlung sind in erster Linie auf die Erdrotation und den Winkel zurückzuführen, in dem die Sonnenstrahlen einen bestimmten Ort erreichen. Die Intensität der Sonnenstrahlung ist am höchsten, wenn die Sonne im Zenit steht, also um die Mittagszeit, und nimmt am Morgen und Abend ab.
-
-Die jahreszeitlichen Schwankungen ergeben sich aus der Neigung der Erdachse, die dazu führt, dass der Einfallswinkel der Sonne im Laufe des Jahres variiert. Infolgedessen schwankt die Sonneneinstrahlung, wobei die Sonneneinstrahlung in den Sommermonaten intensiver und in den Wintermonaten schwächer ist.
-
-Außerdem beeinflussen Faktoren wie Bewölkung, Luftverschmutzung und geografische Lage die räumlichen Schwankungen der Sonneneinstrahlung. Gebiete in Äquatornähe erhalten im Allgemeinen das ganze Jahr über eine höhere Sonneneinstrahlung als Regionen in höheren Breitengraden.
-
-
-
-
-
-
-
-
-
 \newpage
 
 \section{Zusammenhänge der Merkmale}
@@ -451,6 +421,7 @@ Da im Gegensatz zu Computern Menschen visuelle Grafiken an Stelle einer mit Zahl
 \autoref{fig:pairplot_all} zeigt die Daten einer Solaranlage in der Gemeinde Linthicum im Bundestaat Maryland\footnote{Maryland ist ein Bundesstaat an der Ostküste der Vereingiten Staaten von Amerika.} und die dazugehörigen Wetterdaten. In \autoref{fig:pairplot_all} lässt sich die lineare Beziehung zwischen der Sonneneinstrahlung in der Nähe der Stadt Baltimore und dieser spezifischen Solaranlage beobachten. Allerdings sei an dieser Stelle erwähnt, dass nicht bei allen Solaranlagen das Streudiagramm ein solch deutliches Muster erblicken lässt. Dies kann man auf verschiedene Gründe zurückführen. Wechselrichter oder Solarmodule mit einer niedrigeren beziehungsweise höheren Effizienz könnten würden dazu führen, dass aus der gleichen Sonneneinstrahlung unterschiedlich viel in elektrische Energie umgewandelt werden kann. Ebenso gilt es zu bedenken, dass die Wetterdaten von einem separaten Dienst verwendet werden. Es ist nicht garantiert, das die Wetterstationen, die möglicherweise gar nicht exakt an diesem Standort stehen werden, für alle Orte auf der Welt die gleiche Qualität gewährleisten.
 
 \subsubsection{Qualität der Daten}
+\label{subsubsec:quality_data}
 
 In der Diagonalen der \autoref{fig:pairplot_all} sind Balkendiagramme abgebildet, die die Verteilung der einzelnen Merkmale aufweisen. Besonders interessant ist hierbei das Balkendiagramm zum Bewölkungsgrad in Prozent. Die auffällige Verteilung spiegelt die in Kapitel 4.3.1 bereits erwähnte Problematik die Bewölkung am Himmel anhand einer Prozentzahl darzustellen wider. Bei einem Index, der die Bewölkung einer Ortschaft wiedergeben soll, würden wir erwarten, dass die Verteilung keine größeren Ausreißer beinhaltet. Selbstverständlich ist die Bewölkung von Ort zu Ort unabhängig. So haben Städte in der Nähe von Flüssen in der Regel einen höheren Niederschlag, da sich über den Stadtflächen durch den Asphalt und die Betonflächen die Luft stärker erwärmt als über Grünflächen. Folglich verdunstet mehr Wasser, worauf die Wolken zu schwer werden können und letztendlich abregnen. Das bedeutet, dass es kein einheitliches Schaubild gibt, dass wir als Referenz verwenden könnten. Dass einige Werte jedoch eklatant auftreten, währenddessen deren benachbarte Werte überhaupt nicht in der Statistik vertreten sind, ist ein recht starkes Indiz dafür, dass es sich bei den Angaben zu der Bewölkung um Schätzwerte\footnote{Die Dokumentation des Wetterdienstleisters beschreibt den Wert wie folgt: "Die Wolkenbedeckung ist der Anteil des Himmels, der von Wolken bedeckt ist, ausgedrückt in Prozent. Die Wolkenbedeckung gilt für alle Höhenlagen. Die Tageswerte umfassen den Mittelwert der stündlichen Werte der Wolkenbedeckung."
 
@@ -527,7 +498,33 @@ Die Tatsache, dass nichtlineare Beziehungen gut erkannt werden können ist sowoh
 \subsection{Aufbau eines Entscheidungsbaum}
 
 Künstliche Intelligenz nimmt eine immer bedeutendere Rolle in unserer heutigen Gesellschaft ein. Bereiche unseres täglichen Lebens werden bereits durch sie erheblich erleichtert. Dennoch schreckt ein Teil der Gesellschaft vor den noch unerforschten Begleiterscheinungen der neuen Technologie zurück. Nicht selten sind die Ergebnisse dieser Algorithmen schwer zu verstehen, wodurch Ungewissheiten hervorgerufen werden. 
-Ein Entscheidungsbaum ist ein Modell aus dem Bereich des maschinellem Lernens, welches wiederum ein Teilgebiet von künstlicher Intelligenz ist. Obwohl Entscheidungsbäume derzeit als äußerst mächtige Lernalgorithmen angesehen werden, sind ihre Prognosen äußerst leicht nachzuvollziehen. Im Grunde genommen ist ein Entscheidungsbaum eine Verkettung von \textit{Wenn-Sonst-Anweisungen}, die schlussendlich zum Ergebnis führen. \autoref{fig:binary_tree_linthicum} zeigt den Entscheidungsbaum für die Solaranlage in Linthicum, Maryland, welcher vom \textit{CART-Algorithmus} erstellt.
+Ein Entscheidungsbaum ist ein Modell aus dem Bereich des maschinellem Lernens, welches wiederum ein Teilgebiet von künstlicher Intelligenz ist. Obwohl Entscheidungsbäume derzeit als äußerst mächtige Lernalgorithmen angesehen werden, sind ihre Prognosen äußerst leicht nachzuvollziehen. Im Grunde genommen ist ein Entscheidungsbaum eine Verkettung von \textit{Wenn-Sonst-Anweisungen}, die schlussendlich zum Ergebnis führen. 
+
+\begin{figure}[H]
+\centering
+\def\svgwidth{425pt}
+\input{assets/binary_tree_linthicum_zoom_v2.pdf_tex}
+\caption{Ausschnitt des Entscheidungsbaum für die Prognose der Solaranlage in Linthicum, Maryland}
+\label{fig:binary_tree_linthicum}
+\end {figure}
+
+Da der komplette Binärbaum mit der Tiefe 11 zu groß für eine Abbildung innerhalb dieser Arbeit ist, zeigt \autoref{fig:binary_tree_linthicum} einen kleinen Ausschnitt des Entscheidungsbaum für die Solaranlage in Linthicum, Maryland, welcher der \textit{CART-Algorithmus}\footnote{Die Funktion des \textit{Classification and Regression (CART) Algorithmus} ist es, eine optimale zweiteilige Trennung zu finden, indem ein Merkmal und ein Grenzwert gesucht wird, wodurch der mittlere quadratische Fehler der zwei neuen Teilmengen minimal wird. Erstmals wurde dieser Algorithmus von Leo Breiman 1984 publiziert.} erstellt hat. In der ersten Zeile eines jeden Knotenpunktes steht die \textit{Wenn-Sonst-Anweisung}, die den weiteren Verlauf bestimmt. Falls die Bedingung erfüllt wird, so wird die Bedingung des linken Kinderknoten als nächstes überprüft, oder die des rechten Kinderkonten, falls ihr nicht nachgekommen werden konnte. Dieses Verfahren dauert so lange an, bis man beim Ende des Binärbaums, einem Blatt, angekommen ist.
+
+Das Feld \textit{squared\_error} gibt den mittleren quadratischen Fehler der sich in diesem Feld befindenden Proben in Bezug auf den Wert des Feldes an. Wie viele Proben des Trainingsdatensatz diese Bedingungen und demzufolge die darüber liegenden Bedingungen ebenso erfüllen, lässt sich aus den Knotenpunkten ablesen. Der dort zu sehende Wert wäre die Prognose für die jeweiligen Datenreihen, wenn der Knotenpunkt keine Kinderknoten mehr hätte.
+
+Anhand der Häufigkeit, in der das Merkmal Sonneneinstrahlung auftritt, lässt sich die enorme Bedeutung für die Prognose der Stromerzeugung erahnen. Insbesondere die Tatsache, dass die Sonneneinstrahlung bei sämtlichen Modellen die Entscheidung für die obersten und somit grundlegendsten \textit{Wenn-Sonst-Anweisungen} bildet, verleiht dem Gewicht der Sonneneinstrahlung weiteren Nachdruck.
+
+Um ein besseres Verständnis für die Gewichtungen der einzelnen Merkmale zu bekommen, lassen wir uns ein Histogramm abbilden, dass die Anzahl der Verwendungen der einzelnen Merkmale bei den \textit{Wenn-Sonst-Anweisungen} darstellt.
+
+\begin{figure}[H]
+\centering
+\fontsize{20}{20}\selectfont
+\def\svgwidth{400pt}
+\input{assets/histogram_feature_quantity.pdf_tex}
+\caption{Verwendung der jeweiligen Merkmale im Entscheidungsbaum}
+\label{fig:histogram_feature_quantity}
+\end{figure}
+
 
 \subsection{Schlussfolgerungen für das Training des Modells}
 
@@ -609,6 +606,25 @@ OPTIMIERUNG DES RASTERS UNTERSUCHEN UND DIE GEFUNDEN HYPERPARAMETER HIER ABBILDE
 \newpage
 
 \section{Evaluierung des Lernalgorithmus}
+
+\subsection{Evaluierung der einzelnen Merkmale}
+
+\subsubsection{Bewölkungsgrad}
+
+Die im \fullref{subsubsec:quality_data} zuvor geäußerten Bedenken, dass die Angaben des Wetterdienst bezüglich des Bewölkungsgrad zu fragwürdig sind, sollen anhand der Evaluierung des Lernalgorithmus untersucht werden. Dazu trainieren wir das Modell einmal mit und einmal ohne den Bewölkungsgrad als Teil der Merkmalsmatrix. Anschließend vergleichen wir den Determinierungskoeffizienten. Dabei gilt allerdings zu beachten, dass die Aufteilung des gesamten Datensatzes zu einem Test- und einem Trainingsdatensatz randomisiert stattfindet. Dadurch sind die Ergebnisse nicht reproduzierbar und die Evaluierung der unterschiedlichen Modelle nur bedingt vergleichbar. Um dies Genüge zu leisten, teilen wir die Datensätze in etwa zwei gleichgroße Teilmengen auf. So sinkt die Wahrscheinlichkeit, dass Ausreißer im Testdatensatz den mittleren quadratischen Fehler übermäßig verfälschen. Ausreißer im Trainingsdatensatz werden durch Hyperparameter wie die Mindestanzahl an Proben pro Blatt beschränkt und das Modell sodurch geglättet. 
+
+Zudem führen wir die Evaluierung mehrmals durch und erhalten dadurch mehrere Vergleichswerte. Lassen wir den Bewölkungsgrad aus der Merkmalsmatrix außen vor, so erhalten wir für den Determinierungskoeffizienten des Entscheidungsbaum Werte zwischen 0.82 und 0.89. Im Durchschnitt schneidet das Modell um 0.04 besser ab, als wenn der Bewölkungsgrad für die Prognose berücksichtigt wird.
+
+
+
+\newpage
+
+\section{Zusammenfassung und Fazit}
+
+
+\newpage
+
+\section{Ausblick}
 
 
 \end{document}
